--- a/www/cars-style.css
+++ b/www/cars-style.css
@@ -1,3 +1,106 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400 300,700");
+:root {
+  --blue: #008cba;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #F04124;
+  --orange: #fd7e14;
+  --yellow: #E99002;
+  --green: #43ac6a;
+  --teal: #20c997;
+  --cyan: #5bc0de;
+  --white: #fff;
+  --gray: #888;
+  --gray-dark: #333;
+  --primary: #008cba;
+  --secondary: #eee;
+  --success: #43ac6a;
+  --info: #5bc0de;
+  --warning: #E99002;
+  --danger: #F04124;
+  --light: #eee;
+  --dark: #222;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+  --font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+body {
+  margin: 0;
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 0.9375rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #222;
+  text-align: left;
+  background-color: #fff;
+}
+
+button {
+  border-radius: 0;
+}
+
+button:focus {
+  outline: 1px dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
+input,
+button,
+select,
+optgroup,
+textarea {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+button,
+input {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button,
+html [type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  padding: 0;
+  border-style: none;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+}
+
+input[type="date"],
+input[type="time"],
+input[type="datetime-local"],
+input[type="month"] {
+  -webkit-appearance: listbox;
+}
+
+
 .btn.radiobtn.btn-default.active {
   background-color:#337ab7;
   border-color:#337ab7;
@@ -5,22 +108,82 @@
   color:white;
 }
 
+.btn.radiobtn.btn-default {
+  background-color: #efefef;
+  border-color: #efefef;
+  color:black;
+}
+
+.btn.radiobtn.btn-default:hover {
+  background-color: #e8e3e3;
+  border-color: #bcbaba;
+  color:black;
+}
+
+.btn.radiobtn.btn-default.active:hover {
+  background-color:#337ab7;
+  border-color:#337ab7;
+  font-weight:bold;
+  color:white;
+}
+
+
+
+
 .container-fluid {
   margin:auto;
   max-width: 1000px
 }
 
-#results {
-  max-width:620px;
+.well{
+  background-color:white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
 
-#input_col {
-  max-width:380px;
+.row{
+  margin-left:1px;
+  margin-right:1px;
 }
+.out_stroke_details{
+  font-size:16px;}
 
 #user_age {
-  font-size:38px;
+  font-size:34px;
   height:50px;
   width: 110px;
 }
+
+#user_age:hover {
+  font-size:36px;
+  height:50px;
+  width: 110px;
+  background-color:#f9f9f9;
+}
+
+#input_col {
+  max-width:360px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#results_title {
+ font-size: 38px;
+ font-weight: bold;
+}
+
+#results {
+  max-width:620px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+#results_well {
+  background-color:#ade1f4;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
