--- a/www/cars-style.css
+++ b/www/cars-style.css
@@ -158,9 +158,14 @@ label{
   margin-right:-5px;
 }
 
+.titles {
+ font-size: 3.4rem;
+ font-weight: bold;
+}
+
 .output_desc {
   line-height: 1.2;
-  font-size: 26px;
+  font-size: 2.1rem;
 
 }
 
@@ -170,11 +175,6 @@ label{
 .ref{
   font-size: 1.2rem;}
 
-#input_title{
-font-size:3.5rem;
-font-weight:600;
-
-}
 
 #user_age {
   font-size:3.5rem;
@@ -200,13 +200,6 @@ font-weight:600;
   margin-right: auto;
 }
 
-
-#results_title {
- font-size: 38px;
- font-weight: bold;
-}
-
-
 #results {
   max-width:650px;
   margin-left: auto;
@@ -214,8 +207,14 @@ font-weight:600;
 
 }
 
-#results_well {
+#results_stroke_well {
   background-color:#BBDEFB;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#results_bleeding_well {
+  background-color:#c8e6c9;
   margin-left: auto;
   margin-right: auto;
 }
