--- a/www/cars-style.css
+++ b/www/cars-style.css
@@ -176,6 +176,12 @@ label{
 .ref{
   font-size: 1.2rem;}
 
+/* TABS */
+ .tabbable > .nav > li[class=active] >a {
+   background-color: aqua;  color:black
+
+ }
+.tabbable > .nav > li >a {background-color: red;}
 
 #user_age {
   font-size:3.5rem;
@@ -229,6 +235,9 @@ label{
 #results_gauge {
   min-height: 220px;
 }
+
+
+/* STYLE FOR BOARD */
 
 #board-inner {
   padding: 0px;
