--- a/www/cars-style.css
+++ b/www/cars-style.css
@@ -177,7 +177,7 @@ label{
 
 }
 
-.out_stroke_details{
+.explanitory_text{
   font-size:1.6rem;
 }
 .ref{
@@ -219,7 +219,7 @@ label{
 }
 
 #in_prevDiag {
-  font-size: 1.5rem;
+  font-size: 1.9rem;
   font-weight: 600;
 }
 
