--- a/www/cars-style.css
+++ b/www/cars-style.css
@@ -120,6 +120,15 @@ label{
   font-size: 1.5rem;
 }
 
+/* space between selectors means descendent selector*/
+.tab-pane[data-value=Blødning] .btn.radiobtn.btn-default.active {
+  background-color:#B73338 ;
+  border-color:#92292D;
+  font-weight:bold;
+  color:white;
+  font-size: 1.5rem;
+}
+
 
 .btn.radiobtn.btn-default {
   background-color: #efefef;
@@ -155,8 +164,8 @@ label{
 }
 
 .row{
-  margin-left:-5px;
-  margin-right:-5px;
+  margin-left:-10px;
+  margin-right:-10px;
 }
 
 .results_stroke_well {
@@ -194,6 +203,7 @@ label{
   font-size: 1.2rem;
 }
 
+
 #user_age {
   font-size:3.5rem;
   height:50px;
@@ -220,7 +230,7 @@ label{
 
 #in_prevDiag {
   font-size: 1.9rem;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 
